infrastructure/subsystems/networking-core/traefik/whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik
  labels:
    app.kubernetes.io/name: whoami
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
  - name: whoami
    port: 80
    targetPort: 80
    protocol: TCP
